# pp0

./: .gitignore  Cargo.toml  config.toml  net.nnue  perft.log.old  rustfmt.toml
array_vec/: Cargo.toml
array_vec/src/: lib.rs
bitboard/: Cargo.toml
bitboard/src/: chess.rs  chessbb.rs  init.rs  lib.rs
chessbb/: Cargo.toml  rustfmt.toml
chessbb/src/: chesspiece.rs  lib.rs  main.rs  nnue.rs  square.rs
chessbb/src/bitboard/: attack.rs  bit_ops.rs  mod.rs
chessbb/src/bitboard/attack/: init.rs  magic.rs
chessbb/src/bitboard/attack/data/: bishop.rs
chessbb/src/chessboard/: fen.rs  mailbox.rs  mod.rs  movegen.rs  perft.rs  pieceboard.rs  updatestate.rs
chessbb/src/chessboard/zobrist/: bit_ops.rs  mod.rs
chessbb/src/chessboard/zobrist/data/: data.rs
chessbb/src/chessmove/: mod.rs
chessboard/: Cargo.toml
chessboard/src/: chessmove.rs  constdata.rs  constvec.rs  hashvec.rs  lib.rs  lib_old.rs  movegen.rs
nnet/: Cargo.toml
nnue/: Cargo.toml
nnue/src/: grad.rs  lib.rs  phi.rs  rustfmt.toml
pp0/: Cargo.toml
pp0/src/: evaluator.rs  lib.rs  search.rs  transposition.rs
pp0_chess/: Cargo.toml
src/: chessgame.rs  chessnet.rs  main.rs  scoreboard.rs  simulation.rs  uci.rs
src/nnets/: grad.rs  mod.rs  phi.rs
trainer/: Cargo.toml
trainer/src/: adam.rs  main.rs  player.rs  scoreboard.rs  simulation.rs
