[package]
name = "pp0"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
debug = 1

[dependencies]
#nnet = { git = "https://github.com/fangs124/nnet.git" }
#chessbb = { git = "https://github.com/fangs124/chessbb.git" }

nnet = { path = "../nnet" }
chessbb = { path = "../chessbb" }

#might want to get rid of these eventually
nalgebra = { version = "0.34.0", features = ["rand", "serde-serialize"] }
rand = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
inquire = "0.7.5"
termion = "4.0.5"
rayon = "1.11.0"
itertools = "0.14.0"
