[workspace]
resolver = "3"
members  = [ "chessbb", "nnue", "pp0", "trainer" ]

[profile.dev]
opt-level = 1

[profile.release]
#strip           = "symbols"
opt-level       = 3
lto             = true
codegen-units   = 1
debug           = 1
incremental     = false
overflow-checks = false

#[profile.release]
#strip = "symbols"
#opt-level = 3
#lto = true
#codegen-units = 1
#panic = 'abort'
#debug = false
#rpath = false
#debug-assertions = false
#incremental = false
#overflow-checks = false
