[package]
name = "bitboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }
array_vec = { path = "../array_vec" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
[features]
rand = ["dep:rand"]