[package]
name    = "chessbb"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = {version = "0.*", features = [ "v3" ], optional = true}
arrayvec = {version = "0.7.6", optional = true}
smallvec = {version = "1.15.*", features = [
    "const_generics",
], optional = true}

[features]
default = [
    "arrayvec",
    "maybemailbox",
    "rowcolmath",
    "piececolourboard",
    "kinglessattackmask",
]

arrayvec           = [ "dep:arrayvec" ]
smallvec           = [ "dep:smallvec" ]
piececolourboard   = [  ]
maybemailbox       = [  ]
kinglessattackmask = [  ]
rowcolmath         = [  ]
diagmath           = [  ]
mimalloc           = [ "dep:mimalloc" ]
