[package]
name    = "trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
nnue    = {path = "../nnue"}
chessbb = {path = "../chessbb"}
pp0     = {path = "../pp0"}

rayon      = "1.11.0"
inquire    = "0.9.*"
serde      = {version = "1.0.219", features = [ "derive" ]}
serde_json = "1.0.143"
termion    = "4.*"
rand       = "0.9.*"
nalgebra   = "0.*"
